# AgentVPS

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  agentvps-v2-roadmap.json  agentvps-v2-roadmap.md  analise-openclaw-vs-agentvps.md  commit_msg.txt  conftest.py  debug_commands.py  diagnose_full.py  pyproject.toml  requirements.txt  test_agent.py  test_all_intents.py  test_bot.py  test_containers.py  test_fase5_6.py  test_memory.py  test_self_improve.py  tmp_account360_runtime_check.py
.github/: pull_request_template.md
Sprint260214/: sprint-01-implementacao.md  sprint-01-objetivo.md  sprint-01-referencia-rapida.md  sprint-01-roadmap.md
Sprint260215/: avaliacao-v3-agentvps-fev2026.md  avaliacao-v4-agentvps-fev2026.md  pdr-agentvps.md  pdr-v4-agentvps.md  sprint-02-implementacao.md  sprint-02-objetivo.md  sprint-02-roadmap.md  sprint-03-implementacao.md  sprint-03-objetivo.md  sprint-03-roadmap.md  sprint-09-objetivo.md
archive/: README.md  agentvps-fase0-estabilizacao.md  plano-implantacao-vps-agente-v2.md
brain/: agent-cli.sh  model-selector.sh
configs/: .env.example  docker-compose.core.yml  docker-compose.n8n.yml  docker-compose.profiles.yml  docker-compose.qdrant.yml  init-db.sql  mcp-server.service  migration-autonomous.sql  migration-memory-soul.sql  migration-skills-catalog.sql  migration-voice-context.sql  models.json  skills-catalog-fleetintel.json  skills-catalog-sources.json  telegram-bot.service  updater-policy-bundle.json  updater-protocol-mappings.json  updater-runbooks.json
core/: __version__.py  codex_operator_bridge.py  config.py  env.py  mcp_server.py  mcp_sse.py  multimodal.py  observability.py  progress.py  requirements-mcp.txt  self_improver.py
docs/: ARCHITECTURE.md  CLAUDE_AUTH_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  GIT_GOVERNANCE.md  MCP_SERVER.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  SSH_TUNNEL_GUIDE.md  VOICE_RECORDER_TUNING.md
plans/: Resposta Claude002_260208.md  agent-autonomous-evolution.md  autonomous-agent-architecture.md  deployment-tracker.md  gemini-integration.md  plano-implementacao-vps-agente.md
scripts/: audit_git_governance.py  deploy-mcp.sh  deploy-vps.sh  deploy.sh  deploy_release.sh  install-mcp.sh  self_improve.sh  setup-vps.sh  update-vps.sh  voice_context_batch.py
telegram-bot/: bot.py  telegram_handler.py
telegram_bot/: __init__.py  bot.py  telegram_handler.py
tests/: test_agent_progress.py  test_allowlist.py  test_autonomous_cap_gate.py  test_catalog_operations.py  test_catalog_sync_engine.py  test_circuit_breaker.py  test_consumer_contract_validation.py  test_consumer_sync.py  test_deploy_safety.py  test_execute_scheduled_skill.py  test_external_mcp_client.py  test_external_specialist_skills.py  test_external_workflows.py  test_gateway.py  test_graph.py  test_health_check.py  test_identity_soul_prompt.py  test_integration.py  test_llm_provider.py  test_memory_policy.py  test_memory_retention_audit.py  test_memory_semantic_qdrant.py  (+14 more)
(+163 files in other folders)
